# r2modman-headless

./: .gitignore  BUILD  LICENSE  Makefile  README.md  WORKSPACE  build.go  deps.bzl  go.mod  go.sum  main.go
.github/workflows/: build_continuous.yaml  release.yaml
r2modman/: BUILD.bazel  api.go  doc.go  export.go  export_test.go  fx.go  mod.go  thunderstore.go
r2modman/testdata/: Megamodheim.r2z  RealmOfModding_20220214.r2z  Realm_Of_Atflac_2021_05_15.r2z  Valheim_Creative_Mode.r2z  Xmas_Valheim_v1.2_1704056810687.r2z  mods-5.r2z
zip/: BUILD.bazel  extractor.go  extractor_test.go  fx.go  hardcoded.go
