load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "r2modman",
    srcs = [
        "api.go",
        "doc.go",
        "export.go",
        "fx.go",
        "mod.go",
        "thunderstore.go",
    ],
    importpath = "github.com/mpawlowski/r2modman-headless/r2modman",
    visibility = ["//visibility:public"],
    deps = [
        "@in_gopkg_yaml_v2//:yaml_v2",
        "@org_uber_go_fx//:fx",
    ],
)

go_test(
    name = "r2modman_test",
    srcs = ["export_test.go"],
    data = glob(["testdata/**"]),
    embed = [":r2modman"],
    deps = ["@com_github_stretchr_testify//assert"],
)
